<resources>
    <string name="app_name">KillerPad</string>
    <string name="menu">Menu</string>
    <string name="joystick">Joystick</string>
    <string name="buttons">Buttons</string>
    <string name="start_game">START GAME</string>
    <string name="usuario">Usuario</string>
    <string name="ip">IP</string>
    <string name="puerto">Puerto</string>
    <string name="exit">Exit</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="ship_select">Selecciona tu nave</string>
    <string name="accept_connection">Accept connection</string>
    <string name="error_connexion">Error en la conexión.</string>
    <string name="error_game_started">No se puede conectar a una partida empezada.</string>
    <string name="exit_game_confirmation">¿Seguro que quieres volver al menú?</string>
    <string name="exit_info">Esta acción finalizará tu partida actual.</string>
    <string name="connecting">Connecting...</string>
    <string name="splash_background">Splash screen background.</string>
    <string name="killer_pad_logo">Killer Pad logo.</string>
    <string name="accept_button">Accept</string>
    <string name="cancel_button">Cancel</string>
    <string name="batmobile_ship">Batmobile ship</string>
    <string name="octane_ship">Octane ship</string>
    <string name="marauder_ship">Marauder ship</string>
    <string name="boost">BOOST</string>
    <string name="shoot">SHOOT!!!</string>
    <string name="dash">DASH</string>
    <string name="help_button">Help</string>
    <string name="color_picker">Color Picker</string>
    <string name="ship_picker">Ship Picker</string>
    <string name="scores_button">Scores</string>
    <string name="settings_button">Settings</string>
    <string name="connection_title">Connection</string>
    <string name="gamepad_settings">Gamepad settings</string>
    <string name="score">Score</string>
    <string name="top_scores">Top 10 scores</string>
    <string name="death_message">YOU GOT KILLED, KEEP TRYING TO BEAT THE KILLER GAME</string>
    <string name="win_message">CONGRATULATIONS YOU ARE THE BIGGEST KILLER</string>
    <string name="help_title">KILLER GAME</string>
    <string name="help_content">En este juego deberá derrotar a todos sus rivales disparando sus naves o que interactuen con otros objetos que los puedan eliminar,
    Se trata de un juego rápido y apasionante donde podrás escoger 3 tipos de nave pulsando en el botón de opciones y en el botones de nave consecuentemente, cada nave tiene
    diferentes estadísticas asi que elige con precaución, también podrás darle tu toque de personalización pulsando la rueda de colores y escogiendo el que más te guste.
        \n \n \n Para empezar a jugar deberás pulsar el botón de start y poner el nombre con el que aparecerás en pantalla, la dirección IP del servidor y el puerto.</string>
</resources>
