<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars">

    <Button
        android:id="@+id/go_to_pad"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:background="@drawable/rounded_button_start"
        android:text="@string/start_game"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.6" />

    <ImageButton
        android:id="@+id/btnShipPicker"
        android:layout_width="@dimen/menu_button_size"
        android:layout_height="@dimen/menu_button_size"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button_fuchsia_selector"
        android:clickable="true"
        android:contentDescription="@string/ship_picker"
        android:focusable="true"
        android:src="@drawable/ic_ship"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnColorPicker"
        app:layout_constraintEnd_toEndOf="@+id/btnColorPicker"
        app:layout_constraintStart_toStartOf="@+id/btnColorPicker" />

    <ImageButton
        android:id="@+id/btnColorPicker"
        android:layout_width="@dimen/menu_button_size"
        android:layout_height="@dimen/menu_button_size"
        android:layout_marginBottom="24dp"
        android:background="@drawable/round_button_fuchsia_selector"
        android:clickable="true"
        android:contentDescription="@string/color_picker"
        android:focusable="true"
        android:src="@drawable/ic_color"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnSettings"
        app:layout_constraintEnd_toEndOf="@+id/btnSettings"
        app:layout_constraintStart_toStartOf="@+id/btnSettings" />

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="@dimen/menu_button_size"
        android:layout_height="@dimen/menu_button_size"
        android:layout_marginEnd="56dp"
        android:background="@drawable/round_button_fuchsia_selector"
        android:clickable="true"
        android:contentDescription="@string/settings_button"
        android:focusable="true"
        android:src="@drawable/ic_settings"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/go_to_pad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/go_to_pad" />

    <ImageButton
        android:id="@+id/btnScores"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/round_button_fuchsia_selector"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/scores_button"
        android:src="@drawable/ic_scores"
        app:layout_constraintEnd_toEndOf="@+id/btnHelp"
        app:layout_constraintStart_toStartOf="@+id/btnHelp"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <ImageButton
        android:id="@+id/btnHelp"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="56dp"
        android:background="@drawable/round_button_fuchsia_selector"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/help_button"
        android:src="@drawable/ic_help"
        app:layout_constraintBottom_toBottomOf="@+id/go_to_pad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/go_to_pad" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="230dp"
        android:layout_height="150dp"
        android:contentDescription="@string/killer_pad_logo"
        app:layout_constraintBottom_toTopOf="@+id/go_to_pad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</android.support.constraint.ConstraintLayout>