<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSemi"
    android:minWidth="300dp"
    android:minHeight="200dp">

    <ImageButton
        android:id="@+id/btn_accept"
        android:layout_width="@dimen/round_button_size"
        android:layout_height="@dimen/round_button_size"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button_grey"
        android:clickable="true"
        android:contentDescription="@string/accept_connection"
        android:focusable="true"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/puerto"
        app:srcCompat="@drawable/ic_check" />

    <ImageButton
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/round_button_size"
        android:layout_height="@dimen/round_button_size"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button_grey"
        android:clickable="true"
        android:contentDescription="@string/cancel"
        android:focusable="true"
        android:paddingBottom="4dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puerto" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/usuario"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/usuario"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:shadowColor="@color/lightGrey"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toTopOf="@id/ip"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/ip"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/ip"
        android:background="@drawable/rounded_edit_text"
        android:digits="0123456789."
        android:hint="@string/ip"
        android:imeOptions="actionNext"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:shadowColor="@color/lightGrey"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toTopOf="@+id/puerto"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/puerto"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/puerto"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="sans-serif"
        android:hint="@string/puerto"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:shadowColor="@color/lightGrey"
        android:textColor="@color/darkGrey"
        app:layout_constraintTop_toBottomOf="@+id/ip" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/connection_title"
        android:textAlignment="center"
        android:textColor="@color/darkGrey"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="283dp" />


</android.support.constraint.ConstraintLayout>